--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:extension.helloWorld"
+			"workspaceContains:**/.osc"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
 			{
-				"command": "extension.helloWorld",
-				"title": "Hello World"
+				"command": "extension.create_OBS_Builder",
+				"title": "Create OBS Builder"
 			}
 		]
 	},
